# sdk-rust

./: .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  openapi.yaml
.github/: CODEOWNERS
.github/workflows/: check-release.yml  integration-tests.yml  publish.yml  regenerate.yml  release.yml
.openapi-generator/: FILES
.openapi-generator-templates/: README.md
.openapi-generator-templates/reqwest/: api.mustache  configuration.mustache
docs/: AddManagedSchemaRequest.md  AddManagedTableDecl.md  AddManagedTableRequest.md  ApiErrorDetail.md  ApiErrorResponse.md  AsyncQueryResponse.md  AttachDatabaseCatalogRequest.md  BatchCreateUploadRequest.md  BatchCreateUploadResponse.md  BooleanProfileDetail.md  CategoricalProfileDetail.md  CategoryValueInfo.md  ColumnDefinition.md  ColumnInfo.md  ColumnProfileDetail.md  ColumnProfileDetailOneOf.md  ColumnProfileDetailOneOf1.md  ColumnProfileDetailOneOf2.md  ColumnProfileDetailOneOf3.md  ColumnProfileDetailOneOf4.md  ColumnProfileInfo.md  ColumnTypeSpec.md  ConnectionHealthResponse.md  ConnectionInfo.md  ConnectionRefreshResult.md  ConnectionSchemaError.md  ConnectionTypeDetail.md  ConnectionTypeSummary.md  ConnectionTypesApi.md  ConnectionsApi.md  CreateConnectionRequest.md  CreateConnectionResponse.md  CreateDatabaseRequest.md  CreateDatabaseResponse.md  CreateDatasetRequest.md  CreateDatasetResponse.md  CreateEmbeddingProviderRequest.md  CreateEmbeddingProviderResponse.md  CreateIndexRequest.md  CreateSandboxRequest.md  (+132 more)
examples/: quickstart.rs
scripts/: check-release.py  extract-changelog.py  normalize-openapi.py  release.sh  update_changelog.py
src/: arrow.rs  auth.rs  client.rs  field.rs  http.rs  http_log.rs  lib.rs  query.rs  resources.rs  status.rs  test_support.rs  uploads.rs
src/apis/: configuration.rs  connection_types_api.rs  connections_api.rs  database_context_api.rs  databases_api.rs  datasets_api.rs  embedding_providers_api.rs  indexes_api.rs  information_schema_api.rs  jobs_api.rs  mod.rs  query_api.rs  query_runs_api.rs  refresh_api.rs  results_api.rs  sandboxes_api.rs  saved_queries_api.rs  secrets_api.rs  uploads_api.rs  usage_api.rs  workspaces_api.rs
src/models/: add_managed_schema_request.rs  add_managed_table_decl.rs  add_managed_table_request.rs  api_error_detail.rs  api_error_response.rs  async_query_response.rs  attach_database_catalog_request.rs  batch_create_upload_request.rs  batch_create_upload_response.rs  boolean_profile_detail.rs  categorical_profile_detail.rs  column_info.rs  (+142 more)
tests/: auth_missing_token_401.rs  auth_unknown_workspace.rs  connection_types_read.rs  connections_read.rs  database_catalogs_attach.rs  database_contexts_crud.rs  databases_lifecycle.rs  dataset_versioning.rs  datasets_crud.rs  debug_logging.rs  default_user_agent.rs  embedding_providers_crud.rs  indexes_lifecycle.rs  information_schema_read.rs  jobs_read.rs  managed_tables_lifecycle.rs  presigned_uploads.rs  query_async_polling.rs  results_arrow.rs  saved_queries_read.rs  saved_query_versioning.rs  secrets_crud.rs  smoke.rs  uploads_crud.rs  workspaces_list.rs
(+2 files in other folders)
