[package]
name = "hotdata"
version = "0.1.0"
edition = "2024"
description = "Rust client for the HotData API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
url = "2"
