[package]
name = "hotdata"
version = "0.9.0"
authors = ["developers@hotdata.dev"]
description = "Powerful data platform API for datasets, queries, and analytics."
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hotdata-dev/sdk-rust"
homepage = "https://www.hotdata.dev"
documentation = "https://docs.rs/hotdata"
keywords = ["hotdata", "sdk", "api-client", "arrow", "async"]
categories = ["api-bindings", "asynchronous", "database"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
tokio = { version = "^1.46.0", features = ["fs", "sync", "rt", "macros", "time"] }
tokio-util = { version = "^0.7", features = ["codec"] }
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "stream", "query", "form"] }
async-trait = "^0.1"
bytes = "^1"
futures-core = "^0.3"
log = "^0.4"
arrow-ipc = { version = "55", optional = true }
arrow-array = { version = "55", optional = true }
arrow-schema = { version = "55", optional = true }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
arrow = ["dep:arrow-ipc", "dep:arrow-array", "dep:arrow-schema"]

[dev-dependencies]
tokio = { version = "^1.46.0", features = ["rt-multi-thread", "macros", "time"] }
futures = "^0.3"
wiremock = "0.6"
uuid = { version = "1", features = ["v4"] }
# Lets the integration harness build a reqwest client with a bounded connect
# timeout (see tests/common/mod.rs). default-features = false mirrors the lib;
# the TLS backend comes from the crate's own `native-tls`/`rustls` features via
# Cargo feature unification.
reqwest = { version = "^0.13", default-features = false }

[package.metadata.docs.rs]
all-features = true
